--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /*.swp
 /craftbukkit.jar
 /plugins/*.jar
+/world/
+/world_nether/
+/world_the_end/
+/help.yml
+/server.log
+/server.log.lck
+/server.properties
